Added content to README

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-To be populated.
+Photo Stack View
+================
+
+PhotoStackView is a custom Android view which renders a list of photos as a twisted stack of polaroids.
